manifest-useCases/kustomization-examples/v1.1.1/base/exoplanets/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: exoplanets
  name: exoplanets
spec:
  host: ""
  to:
    kind: Service
    name: exoplanets
